--- a/src/styles/-dataOverview.scss
+++ b/src/styles/-dataOverview.scss
@@ -623,32 +623,32 @@
       }
       .userAward{
         color: #fff;
-        font-size: 13px;
+        font-size: 14px;
         margin-left: 16px;
         width: 65px;
         line-height: 28px;
         margin-top: 20px;
-        .num01{
-            background-image: linear-gradient(90deg,#f9c020 0%,#f83801 60%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            color: transparent;
-            font-weight: bold;
-        }
-        .num02{
-            background-image: linear-gradient(90deg,#92acc7 0%,#315c88 60%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            color: transparent;
-            font-weight: bold;
-        }
-        .num03{
-            background-image: linear-gradient(90deg,#ad6d2d 40%,#f5c166 100%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            color: transparent;
-            font-weight: bold;
-        }
+        // .num01{
+        //     background-image: linear-gradient(90deg,#f9c020 0%,#f83801 60%);
+        //     background-clip: text;
+        //     -webkit-background-clip: text;
+        //     color: transparent;
+        //     font-weight: bold;
+        // }
+        // .num02{
+        //     background-image: linear-gradient(90deg,#92acc7 0%,#315c88 60%);
+        //     background-clip: text;
+        //     -webkit-background-clip: text;
+        //     color: transparent;
+        //     font-weight: bold;
+        // }
+        // .num03{
+        //     background-image: linear-gradient(90deg,#ad6d2d 40%,#f5c166 100%);
+        //     background-clip: text;
+        //     -webkit-background-clip: text;
+        //     color: transparent;
+        //     font-weight: bold;
+        // }
       }
     }
     .top-item+.top-item{
