--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -107,6 +107,11 @@
         }
       }
     }
+    .depsix-table{
+      .cell{
+        text-align: center;
+      }
+    }
   }
   .table-chart{
     padding: 15px;
@@ -415,7 +420,7 @@
   .ChinaphoneMapChart{
     clear: both;
     display: block;
-    margin-top:30px;   
+    margin-top:20px;   
     position: relative; 
     margin-right:0px;
     overflow: auto;
