电商一部渠道分析

--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -252,7 +252,7 @@
         overflow: hidden;
         .team-headerItem{
             float: left;
-            .el-date-editor{width:200px; margin:4px 0;}
+            .el-date-editor{width:200px; margin:4px 0px 4px 5px;}
             .el-input{width:160px; margin:4px 0;}
         }
       }
