6部表格修改

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,6 +36,7 @@
 @import './-stat.scss';
 @import './-productAnalysis.scss';
 @import './-dataOverview.scss';
+@import './-welcome.scss';
 .clear{
   clear:both;
   display:block;  
