--- a/src/styles/-welcome.scss
+++ b/src/styles/-welcome.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     background: url(../assets/wel_bg.jpg) center center no-repeat;
     background-size: cover;
+    cursor: url(../assets/pointer.png), auto;
     .welcome_text{
         width: 1360px;
         margin-left: auto;
@@ -49,14 +50,41 @@
             height: 112px;
             background-color: #f0f0f0;
             border-radius: 8px;
-            color: #d2001e;
+            color: #b60015;
             font-size: 65px;
             font-weight: bold;
             text-align: center;
             line-height: 112px;
             perspective: 112px;
-            &> div.base .base-b{
+            &> div.base .base-a{
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                border-radius: 0 0 3px 3px;
+                width: 100%;
+                height: 100%;
                 background-color: #f0f0f0;
+                -webkit-clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
+                clip-path: polygon(0 50%, 100% 50%, 100% 100%, 0 100%);
+            }
+            &> div.base .base-b{
+                // background-color: #f0f0f0;
+                background-image: linear-gradient(180deg,#c4001d 0% , #ff0000 50%,#c4001d 65% ,#c4001d 100%);
+                background-image:-webkit-linear-gradient(270deg,#c4001d 0% , #ff0000 50%,#c4001d 65% ,#c4001d 100% ); 
+                -webkit-background-clip:text; 
+                -webkit-text-fill-color:transparent; 
+                // &:before{
+                //     content: '';
+                //     display: block;
+                //     position: absolute;
+                //     left: 0;
+                //     width: 100%;
+                //     height: 50%;
+                //     top: 50%;
+                //     background-color: #fff;
+                //     opacity: 0.1;
+                //     z-index: 1; 
+                // }
                 &:after{
                     content: '';
                     display: block;
@@ -112,7 +140,6 @@
             perspective: 160px;
         }
     }
-
     .aimBox{
         width: 1004px;
         height: 76px;
@@ -123,8 +150,7 @@
         .aimNumber{
             position: absolute;
             left: 0;
-            right: 0;
-            width: 100%;
+            right: 11px;
             height: 100%;
             &:before{
                 content: '';
@@ -132,7 +158,7 @@
                 position: absolute;
                 left: 0;
                 bottom: 0;
-                right: 22px;
+                right: 11px;
                 height: 1px;
                 border-bottom: 1px dashed #eee;
             }
@@ -142,9 +168,16 @@
                 position: absolute;
                 left: 0;
                 bottom: 9px;
-                right: 22px;
+                right: 11px;
                 height: 5px;
                 background: url(../assets/wel_line.png) left top no-repeat;
+            }
+            .numtext{
+                letter-spacing: 1px;
+                position: absolute;
+                right: -10px;
+                top: 0;
+                white-space: nowrap;
             }
             .aimnum{
                 position: absolute;
@@ -164,13 +197,14 @@
                     line-height: 30px;
                     display: inline-block;
                     vertical-align: top;
+                    margin-left: 4px;
                 }
                 &:before{
                     content: '';
                     display: block;
                     position: absolute;
-                    bottom: 8px;
-                    right: 0;
+                    bottom: 7px;
+                    right: -15px;
                     width: 30px;
                     height: 30px;
                     background-color: #fff;
@@ -200,25 +234,39 @@
             font-weight: bold;
             line-height: 30px;
             z-index: 1;
+            margin-left: -10px;
+            .numtext{
+                position: absolute;
+                left: -15px;
+                top: 0;
+                letter-spacing: 1px;
+                white-space: nowrap;
+            }
             span{
                 color: #ffb660;
                 font-size: 18px;
                 line-height: 30px;
                 display: inline-block;
                 vertical-align: top;
+                margin-left: 4px;
             }
             &:before{
                 content: '';
                 display: block;
                 position: absolute;
-                bottom: 2px;
-                left: 15px;
+                bottom: 3px;
+                left: 0px;
                 width: 20px;
                 height: 20px;
                 background-color: #fff;
                 border-radius: 50%;
                 border: 4px solid #0183cd;
                 box-shadow: 0px 1px 23px 0px rgba(4, 0, 0, 0.3);
+            }
+        }
+        .nownumbtm{
+            .numtext{
+                top: 78px;
             }
         }
     }
@@ -313,5 +361,17 @@
     }
     100%{
         transform: scale(0.8);
+    }
+}
+
+.aimSearch{
+    display: flex;
+    .item-search{
+        margin-left: 20px;
+    }
+    .aimTitle{
+        font-size: 13px;
+        color: #888;
+        margin-right: 15px;
     }
 }
