--- a/src/styles/-welcome.scss
+++ b/src/styles/-welcome.scss
@@ -302,6 +302,32 @@
                 top: -14px;
                 z-index: -1;
             }
+            .light{
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                border-radius: 25px;
+                &:before{
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    left: -100%;
+                    top: 0;
+                    width: 80%;
+                    height: 100%;
+                    background-image: -webkit-linear-gradient(0deg,hsla(0,0%,100%,0),hsla(0,0%,100%,.5),hsla(0,0%,100%,0));
+                    transform: skewx(-25deg );
+                    -o-transform: skewx(-25deg);
+                    -moz-transform: skewx(-25deg);
+                    -webkit-transform: skewx(-25deg);
+                    transition: all 0.8s ease;
+                    opacity: 0.8;
+                    animation: lightgo 3s linear infinite;
+                }
+            }
         }
         .air01{
             width: 80px;
@@ -361,6 +387,18 @@
     }
     100%{
         transform: scale(0.8);
+    }
+}
+
+@keyframes lightgo {
+    0%{
+        left: -100%;
+    }
+    80%{
+        left: -100%;
+    }
+    100%{
+        left: 100%;
     }
 }
 
