电商一部渠道分析

--- a/src/styles/-webMsg.scss
+++ b/src/styles/-webMsg.scss
@@ -331,4 +331,10 @@
             }
         }
     }
+    .spiderItem{
+        cursor: pointer;
+        &:hover{
+            color:#f73a3e;
+        }
+    }
 }
