改版组员分析

--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -119,6 +119,16 @@
                 }
             }
         }
+        .Workstate{
+            width:120px;
+            padding:0px;
+            margin-left: 20px;
+            .el-input--small .el-input__inner{
+                border-radius:0px;
+                color: #606266;
+                font-size:$fontsize12;
+            }
+        }
     }
     .choosePerson{
             &.active{
