--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1021,7 +1021,7 @@
     }
   }
   .table-input{
-    .el-input+.el-input{
+    .el-input+.el-input,.el-autocomplete+.el-input{
       margin-top:10px;
     }
     .el-input{
