--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -960,7 +960,6 @@
                     }
                     th.el-table__cell{
                         border-top: 1px solid #b7b7b7;
-                        border-bottom: 1px solid #b7b7b7 !important;
                         border-right: 1px solid #b7b7b7 !important;
                     }
                 }
@@ -1001,6 +1000,7 @@
                         padding: 15px 0px;
                     }
                 }
+                .descending .sort-caret.descending{border-top-color:#fff;}
             }             
             .el-table--enable-row-hover .el-table__body tr:hover > td.el-table__cell {
                 background-color: #deebf7;
