改版组员分析

--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -935,10 +935,11 @@
     .dealRankMainItem{
         width:100%;
         background-color: #fff;
-        border:1px solid #f0f0f0;
         .dealRankMainBox{
             text-align: center;
             .el-table{
+                border: 1px solid #b7b7b7;
+                border-bottom:0px solid #b7b7b7;
                 &.SiteTable{border-radius:0px;}
                 &.SiteTable th.is-leaf{line-height: 38px!important;font-size: $fontsize13;}
                 thead.is-group th.el-table__cell{border-bottom:0px;}
