--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -47,6 +47,60 @@
                 }
             }
         }
+        .departchoose{
+            line-height:30px;
+            label{
+                color: #333333;
+                padding: 6px 16px;
+                cursor: pointer;
+                line-height: 20px;
+                border: 1px solid #d8dce5;
+                background: #fff;
+                margin-left: -1px;
+                display: inline-block;
+                margin-right: 0px;
+                &:first-child{
+                    border-top-left-radius:4px;
+                    border-bottom-left-radius:4px;
+                }
+                &.is-checked{
+                    position: relative;
+                    z-index: 5;
+                    border: 1px solid #0048ff;
+                    background-color: #e5ecff;
+                    .el-checkbox__input.is-checked + .el-checkbox__label {
+                        color: #0048ff;
+                    }
+                }
+                .el-checkbox__label{
+                    font-size:$fontsize13;
+                    line-height: 20px;
+                }
+                &:hover{
+                    position: relative;
+                    z-index: 5;
+                    border-color: #0970ff;
+                    background-color: #fff;
+                    .el-checkbox__input .el-checkbox__inner {
+                        background-color: #fff;
+                        border-color: #0970ff;
+                    }
+                    .el-checkbox__input + .el-checkbox__label {
+                        color: #0970ff;
+                    }
+                }
+            }
+            .el-checkbox-group{
+                display: inline-block;
+                label{
+                    border-radius:0px;
+                    &:last-child{
+                        border-top-right-radius:4px;
+                        border-bottom-right-radius:4px;
+                    }
+                }
+            }
+        }
         .departItems{
             line-height:30px;
             span{
@@ -1016,7 +1070,12 @@
 
 @media (max-width:1500px){
     .memberTopTab{
-        .chooseDepart{
+        .chooseDepart{            
+            .departchoose{
+                label{
+                    padding: 6px 10px;
+                }
+            }
             .departList{
                 span{
                     padding: 6px 10px;
