--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -38,12 +38,17 @@
                     border-top-right-radius:4px;
                     border-bottom-right-radius:4px;
                 }
-                &.active,&:hover{
+                &:hover,&.active{
                     border: 1px solid #0048ff;
-                    background-color: #e5ecff;
                     color: #0048ff;
                     position: relative;
                     z-index: 2;
+                }
+                &:hover{
+                    background-color: #fff;
+                }
+                &.active{
+                    background-color: #e5ecff;
                 }
             }
         }
