--- a/src/styles/-productAnalysis.scss
+++ b/src/styles/-productAnalysis.scss
@@ -487,7 +487,6 @@
         }
         .inquiryUl{
             overflow:hidden;
-            li{
                 &.inquiryUlTit{
                     position:relative;
                     padding:12px;
@@ -517,18 +516,17 @@
                     }
                 }
                 .proSort{
-                    float:left;
-                    width:50px;
-                    height:38px;
+                    height:48px;
                     text-align:center;
                     position:relative;
                     .numTop{
                         width:50px;
-                        height:38px;
+                        height:48px;
                         color:#888888;
                         font-size:$fontsize14;
                         text-align:center;
-                        line-height:38px;
+                        line-height:48px;
+                        margin-left: 12px;
                         &.numTop01{
                             position:relative;
                             top:4px;
@@ -547,15 +545,18 @@
                             background:url(../assets/personal_InquiryIcon03.png) center center no-repeat;
                             background-size:50px 47px;
                         }
+                        .inrank{
+                            opacity: 0;
+                        }
                     }
                 }
                 .proName{
-                    float:left;
+                    // float:left;
                     color:#111111;
                     font-size:$fontsize14;
                     padding-left:20px;
-                    line-height:38px;
-                    width:calc(100% - 210px);
+                    line-height:48px;
+                    // width:calc(100% - 210px);
                     span{
                         clear:both;
                         display:block;
@@ -566,12 +567,12 @@
                     }
                 }
                 .proNum{
-                    float:left;
+                    // float:left;
                     color:#333333;
                     font-size:$fontsize14;
                     text-align:center;
-                    line-height:38px;
-                    width:80px;
+                    line-height:48px;
+                    // width:80px;
                     span{
                         clear:both;
                         display:block;
@@ -582,12 +583,13 @@
                     }
                 }
                 .proPie{
-                    float:left;
+                    // float:left;
                     color:#333333;
                     font-size:$fontsize14;
                     text-align:center;
-                    line-height:38px;
-                    width:80px;
+                    line-height:48px;
+                    padding-right: 12px;
+                    // width:80px;
                     span{
                         clear:both;
                         display:block;
@@ -597,7 +599,6 @@
                         overflow:hidden;
                     }
                 }
-            }
         }
         .memberInquiry{
             .memberTit{
@@ -695,6 +696,38 @@
             .milRank{
                 position:relative;
                 li a{padding: 12px;}
+            }
+        }
+        .dataShowtable{
+            &.el-table th.el-table__cell.is-leaf, &.el-table td.el-table__cell{
+                border-bottom: 1px solid rgba(245, 243, 228, 0.8);
+            }
+            &.el-table--medium .el-table__cell{
+                padding: 7px 0;
+            }
+            &.el-table .cell{
+                padding-left: 0;
+                padding-right: 0;
+            }
+            &.el-table th.el-table__cell{
+                font-size:$fontsize14;
+                color:#888;
+                line-height:24px;
+                font-weight: normal;
+                padding-top: 12px;
+                padding-bottom: 12px;
+            }
+            &.el-table th.el-table__cell{
+                padding-left: 12px;
+            }
+            &.el-table th.el-table__cell + th.el-table__cell{
+                padding-left: 20px;
+            }
+            &.el-table th.el-table__cell + th.el-table__cell + th.el-table__cell{
+                padding-left: 0px;
+            }
+            &.el-table th.el-table__cell + th.el-table__cell + th.el-table__cell + th.el-table__cell{
+                padding-right: 12px;
             }
         }
     }
