6部询盘意向添加日月日期

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,6 +37,7 @@
 @import './-productAnalysis.scss';
 @import './-dataOverview.scss';
 @import './-welcome.scss';
+@import './-sixdepart.scss';
 .clear{
   clear:both;
   display:block;  
