6部添加询盘趋势和成员询盘个数

--- a/src/styles/-sixdepart.scss
+++ b/src/styles/-sixdepart.scss
@@ -35,6 +35,9 @@
   .depsix-table .el-table td.el-table__cell.colitem4{
     background-color: #ededed;
   }
+  .depsix-table .el-table td.el-table__cell.colitem5{
+    background-color: #ffe8d1;
+  }
   .depsix-table .el-table .ascending .sort-caret.ascending{
     border-bottom-color: #e6a700;
   }
