--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -1072,6 +1072,115 @@
         }
     }
 }
+.EnquirieGrades{
+    margin:0px -10px;
+    .EnquirieGradesItem{
+        margin:0px 10px;
+        background-color: #fff;
+        display: block;
+        width: 0%;
+        .EnquirieGradesBox{
+            text-align: center;
+            .el-table{
+                border: 1px solid #b7b7b7;
+                border-bottom:0px solid #b7b7b7;
+                &.SiteTable{border-radius:0px;}
+                &.SiteTable th.is-leaf{line-height: 38px!important;font-size: $fontsize13;}
+                thead.is-group th.el-table__cell{border-bottom:0px;}
+                thead{
+                    height:48px;
+                    color: #333333;
+                    font-size:$fontsize13;
+                    font-weight: normal;
+                    tr,th{
+                        background-color: #2d71b5;
+                        font-weight: normal;
+                        color:#fff;
+                    }
+                    th.el-table__cell.is-leaf{
+                        border-top: 1px solid #b7b7b7;
+                        padding: 0;
+                        border-bottom: 1px solid #b7b7b7 !important;
+                        border-right: 1px solid #b7b7b7 !important;
+                    }
+                    th.el-table__cell{
+                        border-top: 1px solid #b7b7b7;
+                        border-right: 1px solid #b7b7b7 !important;
+                    }
+                }
+                .cell{
+                    text-align: center;
+                    line-height: normal;
+                    .uname{
+                        font-size:$fontsize13;
+                        color: #333333;
+                        cursor: pointer;
+                        &:hover{
+                            color:#d62815;
+                        }
+                    }
+                }
+                td.el-table__cell{
+                    border-bottom: 1px solid #b7b7b7 !important;
+                    border-right: 1px solid #b7b7b7 !important;
+                    padding:15px 0px;
+                    &.dayStyle{
+                        background:#fbe5d6;
+                    }
+                    &.monthStyle{
+                        background:#fff4d1;
+                    }
+                    &.yearStyle{
+                        background:#e2f0d9;
+                    }
+                    position: relative;
+                    span.inTime{
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: 0;
+                        bottom: 0;
+                        background: #ebebeb;
+                        display: table-cell;
+                        padding: 15px 0px;
+                    }
+                }
+                .ascending .sort-caret.ascending{border-bottom-color:#fff;}
+                .descending .sort-caret.descending{border-top-color:#fff;}
+            }             
+            .el-table--enable-row-hover .el-table__body tr:hover > td.el-table__cell {
+                background-color: #deebf7;
+                &.dayStyle,&.monthStyle,&.yearStyle,span.inTime{
+                    background: #deebf7;
+                }
+            }
+            .pos{
+                display: inline-block;
+                text-align: center;
+                i{
+                    display: inline-block;                    
+                    width:20px;
+                    height:20px;
+                    margin: 0px 5px;
+                    background: url(../assets/neg01.png) no-repeat center center;
+                    background-size:100%;
+                }
+            }
+            .neg{
+                display: inline-block;
+                text-align: center;
+                i{
+                    display: inline-block;                    
+                    width:20px;
+                    height:20px;
+                    margin: 0px 5px;
+                    background: url(../assets/neg02.png) no-repeat center center;
+                    background-size:100%;
+                }
+            }
+        }
+    }  
+}
 
 @media (max-width:1500px){
     .memberTopTab{
