--- a/src/styles/-userIndex.scss
+++ b/src/styles/-userIndex.scss
@@ -36,19 +36,25 @@
         }
     }
 }
-.transfer-dialog{
-    .transfer-account{
-        height: auto!important;
-        .transfer-title{
-            font-size: 16px;
-            color: #111;
-            margin-bottom: 15px;
-        }
-        .transfer-wrap{
-            .el-transfer{
-                height: 400px!important;
-                margin-bottom: 30px;
-            }
-        }
+.move_dialog{
+    .transfer-title{
+        font-size: 15px;
+        color: #111;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 10px;
+    }
+    .accountCheck{
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .transfer-item{
+        margin-right: 20px;
+    }
+    .transfer-item,.transfer-btns{
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
