--- a/src/styles/-webMsg.scss
+++ b/src/styles/-webMsg.scss
@@ -270,6 +270,33 @@
             float: right;
         }
     }
+    .search_ip{
+        padding:15px 15px 8px 15px;
+        background: #fff;
+        position: relative;
+        margin-bottom:8px;
+        font-size:$fontsize14;
+        span{
+            float: left;
+            padding:7px 15px 7px 0px;
+            width: 20%;
+            color: #1a1a1a;
+            b{
+                color:#004ab1;
+                font-weight: normal;
+            }
+        }
+        p{
+            clear: both;
+            display: block;
+            padding-bottom:15px;
+            font-weight: bold;
+            color: #000000;
+            border-bottom: 1px solid #eee;
+            margin-bottom:8px;
+            font-size: 14px;
+        }
+    }
     .msg-table{
         .msg-text{
             p{
