1部英文统计

--- a/src/styles/-ownPush.scss
+++ b/src/styles/-ownPush.scss
@@ -1877,3 +1877,11 @@
     }
   }
 }
+
+.ChinaphoneTwo .group-body .team-time .team-header .team-headerItem .el-input{
+  width: 200px!important;
+}
+
+.depone_result .chart-wrapper{
+  overflow: visible!important;
+}
