1部英文统计修改

--- a/src/styles/-ownPush.scss
+++ b/src/styles/-ownPush.scss
@@ -1885,3 +1885,12 @@
 .depone_result .chart-wrapper{
   overflow: visible!important;
 }
+.depone_result .el-card__body .card-content{
+  overflow: visible!important;
+}
+.depone_result .ChinaphoneTwoBox .cavans-wrapper{
+  overflow: visible!important;
+}
+.cn-phone-stat .cn-phone-result.depone_result{
+  overflow: visible!important;
+}
