中文询盘质量判定

--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -542,3 +542,75 @@
 .cn-phone-stat .chart-wrapper .chart-body .map-panel .enmap-chart .chart-canvas{
   width: 780px;
 }
+
+.quality-dialog{
+  .el-checkbox{
+    display: block;
+    margin-bottom: 10px;
+    white-space: normal;
+    .el-checkbox__input{
+      vertical-align: top;
+      margin-top: 2px;
+    }
+    .el-checkbox__label{
+      vertical-align: top;
+      width: calc(100% - 16px);
+
+    }
+  }
+  .el-radio{
+    display: block;
+    margin-bottom: 10px;
+    white-space: normal;
+    .el-radio__input{
+      vertical-align: top;
+      margin-top: 2px;
+    }
+    .el-radio__label{
+      vertical-align: top;
+      width: calc(100% - 16px);
+      line-height: 19px;
+    }
+  }
+}
+
+.quality-dialog{
+  .quality-selection{
+    margin-top: 30px;
+    .qscore{
+      color: #f73a3e;
+      margin-left: 5px;
+    }
+  }
+}
+
+.el-table td.el-table__cell .table-score{
+  display: inline-block; 
+  color: #f73a3e; 
+  font-weight: bold;
+  padding: 5px;
+  cursor: pointer;
+}
+.el-popover .pop-p{
+  position: relative;
+  padding-left: 15px;
+  font-size: 14px;
+  line-height: 22px;
+  &:before{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0px;
+    top: 10px;
+    width: 7px;
+    height: 2px;
+    border-radius: 1px;
+    background-color: #888;
+  }
+  &+.pop-p{
+    margin-top: 5px;
+  }
+}
+.pop-quality-hide{
+  display: none;
+}
