--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -544,43 +544,123 @@
 }
 
 .quality-dialog{
+  .quality_content{
+    border: 1px solid #ebeef5;
+    .quality_title{
+      font-size: 0;
+      width: 100%;
+      border-bottom: 1px solid #ebeef5;
+      background: #e2e9ed;
+      .title_type{
+        display: inline-block;
+        vertical-align: middle;
+        width: 80px;
+        padding: 10px 0;
+        text-align: center;
+        font-size: 15px;
+        color: #000;
+      }
+      .title_content{
+        display: inline-block;
+        vertical-align: middle;
+        text-align: center;
+        padding: 10px 0;
+        width: calc(100% - 80px);
+        font-size: 15px;
+        color: #000;
+        padding-left: 20px;
+        border-left: 1px solid #ebeef5;
+        vertical-align: middle;
+      }
+    }
+  }
+  .content_selection{
+    &:after{
+      content: '';
+      display: block;
+      clear: both;
+    }
+    .quality-selection{
+      width: calc(100% - 120px);
+      float: left;
+    }
+    .quality-remark{
+      width: 120px;
+      border-left: 1px solid #ebeef5;
+      float: left;
+      .normal-div{
+        height: 39px;
+        text-align: center;
+      }
+      .normal-div + .normal-div{
+        border-top: 1px solid #ebeef5;
+      }
+      .the-same0,.the-same1,.the-same2,.the-same3,.the-same4,.the-same5,.the-same6{
+        position: relative;
+        span{
+          top: 30px;
+          position: absolute;
+          width: 100%;
+          left: 0;
+        }
+      }
+      .the-same0+.the-same0,.the-same1+.the-same1,.the-same2+.the-same2,
+      .the-same3+.the-same3,.the-same4+.the-same4,.the-same5+.the-same5,
+      .the-same6+.the-same6{
+        border-top: none;
+        span{
+          display: none;
+        }
+      }
+    }
+  }
   .el-checkbox{
     display: block;
-    margin-bottom: 10px;
+    margin-right: 0;
     white-space: normal;
+    height: 39px;
     .el-checkbox__input{
-      vertical-align: top;
+      vertical-align: middle;
       margin-top: 2px;
+      width: 80px;
+      text-align: center;
+      padding: 10px;
     }
     .el-checkbox__label{
-      vertical-align: top;
-      width: calc(100% - 16px);
-
+      padding-left: 0;
+      vertical-align: middle;
+      width: calc(100% - 80px);
+      padding: 10px 20px;
+      border-left: 1px solid #ebeef5;
     }
+  }
+  .el-checkbox + .el-checkbox{
+    border-top: 1px solid #ebeef5;
   }
   .el-radio{
     display: block;
-    margin-bottom: 10px;
+    margin-right: 0;
     white-space: normal;
     .el-radio__input{
-      vertical-align: top;
+      vertical-align: middle;
       margin-top: 2px;
+      width: 80px;
+      padding: 10px 0;
+      text-align: center;
     }
     .el-radio__label{
-      vertical-align: top;
-      width: calc(100% - 16px);
+      vertical-align: middle;
+      width: calc(100% - 80px);
       line-height: 19px;
+      padding: 10px 20px;
+      border-left: 1px solid #ebeef5;
     }
   }
-}
-
-.quality-dialog{
-  .quality-selection{
-    margin-top: 30px;
-    .qscore{
-      color: #f73a3e;
-      margin-left: 5px;
-    }
+  .el-radio + .el-radio{
+    border-top: 1px solid #ebeef5;
+  }
+  .el-radio-group{
+    width: 100%;
   }
 }
 
