中文询盘判定

--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -668,8 +668,10 @@
   display: inline-block; 
   color: #f73a3e; 
   font-weight: bold;
-  padding: 5px;
   cursor: pointer;
+  span{
+    padding: 5px;
+  }
 }
 .el-popover .pop-p{
   position: relative;
