--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -168,6 +168,73 @@
                 }
             }
         }
+        .timeItems{
+            line-height:30px;
+            //span{
+            //    color: #4c4c4c;
+            //    font-size:$fontsize14;
+            //    border: none;
+            //    padding: 6px 16px;
+            //    line-height: 25px;
+            //    background-color: #eff4f8;
+            //    margin-left:10px;
+            //    cursor: pointer;
+            //    &.active,&:hover{
+            //        background-color: #0048ff;
+            //        color: #fff;
+            //    }
+            //    &.active{
+            //        position: relative;
+            //        &:after{
+            //            content:'';
+            //            position: absolute;
+            //            width: 12px;
+            //            height: 12px;
+            //            border-left: 1px solid #f3f3f3;
+            //            border-top: 1px solid #f3f3f3;
+            //            background: #f6f7f8;
+            //            transform: rotate(55deg) skew(20deg);
+            //            left: 35px;
+            //            top:37px;
+            //            margin-left:-7px;
+            //        }
+            //    }
+            //}
+            .date-range{
+                width:200px;
+                border-radius:0;
+                position:relative;
+                height:34px;
+                padding:0px;
+                border:1px solid #e1e3ea;
+                background: none;
+                vertical-align: top;
+                .el-input__inner {
+                    height: 32px;
+                    line-height: 32px;
+                    border: 0px;
+                    padding: 0px 0px 0px 30px;
+                }
+                span.el-range-separator{
+                    background: none;
+                    padding: 6px 6px;
+                    width: auto;
+                    margin: 0px;
+                    line-height: 23px;
+                }
+                &.el-range-editor--mini .el-range-input{background: none;}
+                &.el-date-editor .el-range__icon{
+                    float:right;
+                    margin-left:0;
+                    position:absolute;
+                    right:0;
+                    top:0;
+                    &:before{
+                      vertical-align:middle;
+                    }
+                }
+            }
+        }
         .departItemBtn{
             display: inline-block;
             font-style: normal;
