--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -617,6 +617,10 @@
     }
 }
 
+.chrowDayCount{
+    padding-bottom: 45px;
+}
+
 .rowDayFinish{
     border-top: 1px solid #eaeaea;
     background-color: #fff;
@@ -1349,6 +1353,10 @@
             margin-top: 10px;
         }
     }
+}
+
+.chrowDealCount{
+    padding-bottom: 59px;
 }
 
 .showmonth{
