--- a/src/styles/-productAnalysis.scss
+++ b/src/styles/-productAnalysis.scss
@@ -927,12 +927,28 @@
                     background:rgba(254,76,70,0.1);
                 }
                 &.color-03{
-                    border-color:#fdcb66;
-                    background:rgba(253,203,102,0.1);
+                    border-color:#ffa037;
+                    background:rgba(255,160,55,0.1);
                 }
                 &.color-04{
+                    border-color:#2d7df3;
+                    background:rgba(45,125,243,0.1);
+                }
+                &.color-05{
+                    border-color:#ff7b43;
+                    background:rgba(255,123,67,0.1);
+                }
+                &.color-06{
+                    border-color:#91cc75;
+                    background:rgba(145,204,117,0.1);
+                }
+                &.color-07{
                     border-color:#47cbfe;
                     background:rgba(71,203,254,0.1);
+                }
+                &.color-08{
+                    border-color:#fdcb66;
+                    background:rgba(253,203,102,0.1);
                 }
                 .svg-i {
                     display: none;
