--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -784,6 +784,28 @@
   }
 }
 
+.old_has_select{
+  padding: 0;
+  margin: 0 0 30px 0;
+  list-style: none;
+  height: calc(100vh - 250px);
+  overflow-y: scroll;
+  .quality_title{
+    background: #e2e9ed;
+    padding: 12px 20px;
+    font-size: 15px;
+    color: #000;
+    text-align: left;
+  }  
+  .old_item{
+    padding: 12px 20px;
+    border: 1px solid #ebeef5;
+  }
+  .old_item+.old_item{
+    border-top: none;
+  }
+}
+
 .el-table td.el-table__cell .table-score{
   display: inline-block; 
   color: #f73a3e; 
