feat: 5部添加数据统计

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,6 +38,7 @@
 @import './-dataOverview.scss';
 @import './-welcome.scss';
 @import './-sixdepart.scss';
+@import './-fivedepart.scss';
 .clear{
   clear:both;
   display:block;  
