feat: 业务员提醒修改

--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -1440,4 +1440,79 @@
         color: rgb(89, 89, 89);
       }
     }
-  }
+}
+
+.rowDayCount{
+    padding: 20px 30px 20px 30px;
+    .rowTitle{
+        margin-bottom: 20px;
+    }
+    .rowCountItem{
+        margin-top: 0;
+        margin-bottom: 10px;
+      li{
+        padding: 30px 0;
+        width: calc(25% - 8px);
+        background-image: linear-gradient(-37deg, rgba(81, 130, 228, 1) 0%, rgba(81, 130, 228, 0.85) 100%);
+        position: relative;
+        p{
+            text-align: center;
+            color: rgba(255, 255, 255, 0.8);
+            display: block;
+            position: relative;
+            z-index: 1;
+            font-size: 14px;
+            span{
+                display: block;
+                color: #fff;
+                text-align: center;
+                font-size: 28px;
+                margin-top: 4px;
+                margin-bottom: 0;
+            }
+        }
+        .rowimg{
+            border-radius: 4px;
+            &:before{
+                width: 28px;
+                height: 28px;
+                left: 11px;
+                top: 11px;
+            }
+        }
+        &:before{
+            content: "";
+            display: block;
+            position: absolute;
+            right: 30px;
+            top: 40px;
+            bottom: 20px;
+            left: 40px;
+            background-image: url(../assets/cost01.png);
+            background-size: auto 100%;
+            background-repeat: no-repeat;
+            background-position: right center;
+            opacity: 0.18;
+        }
+      }
+      li+li{
+        margin-left: 10px;
+        background-image: linear-gradient(-37deg, rgba(63, 178, 126, 1) 0%, rgba(63, 178, 126, 0.85) 100%);
+        &:before{
+            background-image: url(../assets/cost02.png);
+        }
+      }
+      li+li+li{
+        background-image: linear-gradient(-37deg, rgba(248, 141, 72, 1) 0%, rgba(248, 141, 72, 0.85) 100%);
+        &:before{
+            background-image: url(../assets/cost03.png);
+        }
+      }
+      li+li+li+li{
+        background-image: linear-gradient(-37deg, rgba(240, 80, 80, 1) 0%, rgba(240, 80, 80, 0.85) 100%);
+        &:before{
+            background-image: url(../assets/cost04.png);
+        }
+      }
+    }
+}
